--- a/android/AndroidManifest.xml
+++ b/android/AndroidManifest.xml
@@ -1,11 +1,12 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.yourcompany.yourapp">
+    package="com.dev.flightmanagementsystem">
 
     <application
         android:label="@string/app_name"
-        android:icon="@drawable/icon">
+        android:icon="@drawable/icon"
+        android:networkSecurityConfig="@xml/network_security_config">
         <activity
-            android:name="org.qtproject.qt5.android.bindings.QtActivity"
+            android:name="org.qtproject.qt6.android.bindings.QtActivity"
             android:configChanges="orientation|screenSize|smallestScreenSize|keyboard|keyboardHidden|navigation"
             android:label="@string/app_name">
             <intent-filter>
