--- a/android/AndroidManifest.xml
+++ b/android/AndroidManifest.xml
@@ -1,21 +1,17 @@
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.dev.flightmanagementsystem">
+<?xml version="1.0"?>
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" package="com.dev.flightmanagementsystem" android:versionCode="" android:versionName="">
 
-    <application
-        android:label="@string/app_name"
-        android:icon="@drawable/icon"
-        android:networkSecurityConfig="@xml/network_security_config">
-        <activity
-            android:name="org.qtproject.qt6.android.bindings.QtActivity"
-            android:configChanges="orientation|screenSize|smallestScreenSize|keyboard|keyboardHidden|navigation"
-            android:label="@string/app_name">
+    <application android:label="@string/app_name" android:networkSecurityConfig="@xml/network_security_config">
+        <activity android:name="org.qtproject.qt6.android.bindings.QtActivity" android:configChanges="orientation|screenSize|smallestScreenSize|keyboard|keyboardHidden|navigation" android:label="@string/app_name" android:screenOrientation="unspecified">
             <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-                <category android:name="android.intent.category.LAUNCHER" />
+                <action android:name="android.intent.action.MAIN"/>
+                <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
     </application>
 
     <!-- 添加网络权限声明 -->
     <uses-permission android:name="android.permission.INTERNET"/>
+<!-- %%INSERT_PERMISSIONS -->
+    <!-- %%INSERT_FEATURES -->
 </manifest>
