--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -32,6 +32,7 @@ qt_add_qml_module(appuntitled7
         QML_FILES views/NoteDetailView.qml
         QML_FILES
         QML_FILES static/sites.js
+        QML_FILES
 )
 
 # Qt for iOS sets MACOSX_BUNDLE_GUI_IDENTIFIER automatically since Qt 6.1.
