--- a/backend/CMakeLists.txt
+++ b/backend/CMakeLists.txt
@@ -21,6 +21,7 @@ add_executable(QtHttpServer
     database/databasemanager.h
     config/database_config.json
     config/database_config.qrc
+    config/database_config.template.json
 )
 target_link_libraries(QtHttpServer PRIVATE
     Qt6::Core
