--- a/backend/CMakeLists.txt
+++ b/backend/CMakeLists.txt
@@ -23,6 +23,7 @@ add_executable(QtHttpServer
     config/database_config.qrc
     config/database_config.template.json
     dto/response_dto.h dto/response_dto.cpp
+    api/login/login.h api/login/login.cpp
 )
 target_link_libraries(QtHttpServer PRIVATE
     Qt6::Core
