--- a/frontend/android/AndroidManifest.xml
+++ b/frontend/android/AndroidManifest.xml
@@ -2,7 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android" package="com.dev.flightmanagementsystem" android:versionCode="" android:versionName="">
 
     <application android:label="@string/app_name" android:networkSecurityConfig="@xml/network_security_config" android:icon="@drawable/icon">
-        <activity android:name="org.qtproject.qt6.android.bindings.QtActivity" android:configChanges="orientation|screenSize|smallestScreenSize|keyboard|keyboardHidden|navigation" android:label="@string/app_name" android:screenOrientation="unspecified">
+        <activity android:name="org.qtproject.qt6.android.bindings.QtActivity" android:configChanges="orientation|screenSize|smallestScreenSize|keyboard|keyboardHidden|navigation" android:label="@string/app_name" android:screenOrientation="landscape">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
                 <category android:name="android.intent.category.LAUNCHER"/>
