增加了Order的相关api，但是还没测试，调整回原来的布局

--- a/backend/CMakeLists.txt
+++ b/backend/CMakeLists.txt
@@ -42,6 +42,7 @@ add_executable(QtHttpServer
     aichat/aichat.h aichat/aichat.cpp
     config/ai.qrc
     config/ai.json
+    dto/order_info_dto.cpp dto/order_info_dto.h
 
 )
 target_link_libraries(QtHttpServer PRIVATE
