--- a/backend/CMakeLists.txt
+++ b/backend/CMakeLists.txt
@@ -48,6 +48,7 @@ add_executable(QtHttpServer
     dto/register_dto.h dto/register_dto.cpp
     api/user/user.h api/user/user.cpp
     dto/update_user_dto.h dto/update_user_dto.cpp
+    dto/get_flights_dto.h dto/get_flights_dto.cpp
 
 )
 target_link_libraries(QtHttpServer PRIVATE
